un version de prueba de las llaves publicas y privadas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <section class="hero">
             <div class="info">
-                <h1>Check the<br>best food</h1>
+                <h1>Check the<br>best food.</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi maxime praesentium accusantium aliquid, modi .</p>
                 <button>Book a table</button>
             </div>
